<resources>
    <string name="app_name">Dice-Game</string>
    <string name="logo">Dice-Game-logo</string>
    <string name="Dice1">UserDice</string>
    <string name="Dice2">ComputerDice</string>
    <string name="Btn1">Higher</string>
    <string name="Btn2">Lower</string>
    <string name="Higher">Higher</string>
    <string name="Lower">Lower</string>
    <string name="DisplayText">Display</string>
    <string name="display">Display</string>


</resources>