<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    android:textAlignment="center"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/dicee_logo" />

        <ImageView
            android:id="@+id/UserDice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/Dice1"
            app:srcCompat="@drawable/dice1" />

        <ImageView
            android:id="@+id/ComputerDice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/Dice2"
            app:srcCompat="@drawable/dice3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Lower"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="#160337"
                android:contentDescription="@string/Btn2"
                android:gravity="center"
                android:text="@string/Lower"
                android:textSize="30sp"
                android:textStyle="bold"
                app:backgroundTint="#3F51B5"
                app:backgroundTintMode="add"
                app:strokeColor="#FBF8F8" />

            <Button
                android:id="@+id/Higher"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="#E91E63"
                android:contentDescription="@string/Btn1"
                android:gravity="center"
                android:text="@string/Higher"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Display"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="50"
                android:background="#3F51B5"
                android:contentDescription="@string/DisplayText"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>